--- a/app/src/main/res/menu/menu_steps_details.xml
+++ b/app/src/main/res/menu/menu_steps_details.xml
@@ -1,7 +1,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context="ng.com.techdepo.bakingapp.StepsDetailsActivity">
+    tools:context="ng.com.techdepo.bakingapp.activities.StepsDetailsActivity">
     <item
         android:id="@+id/action_settings"
         android:orderInCategory="100"
