--- a/app/src/main/res/layout/fragment_steps_details.xml
+++ b/app/src/main/res/layout/fragment_steps_details.xml
@@ -9,10 +9,16 @@
         android:layout_height="match_parent"
         android:orientation="vertical">
 
+        <ImageView
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:id="@+id/step_detail_image"
+            android:scaleType="centerCrop"/>
+
         <com.google.android.exoplayer2.ui.SimpleExoPlayerView
             android:id="@+id/playerView"
             android:layout_width="match_parent"
-            android:layout_height="250dp" />
+            android:layout_height="220dp" />
 
         <View
             android:layout_width="match_parent"
