--- a/app/src/main/res/layout/widget_list_item.xml
+++ b/app/src/main/res/layout/widget_list_item.xml
@@ -1,60 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/bacckground"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/recipe_widget_item"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_margin="4dp"
-    android:gravity="center_vertical"
-    android:orientation="vertical">
+    android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:padding="16dp"
+    android:background="#334"
+    >
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="150dp"
-        android:orientation="horizontal">
-
-        <ImageView
-            android:id="@+id/widget_image_"
-            android:layout_width="150dp"
-            android:layout_height="match_parent"
-            android:padding="8dp"
-            android:scaleType="centerCrop"
-            android:src="@drawable/img_no_thumb" />
-
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:gravity="center_vertical"
-            android:orientation="vertical">
-
-            <TextView
-                android:id="@+id/widget_name"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:paddingLeft="4dp"
-                android:paddingRight="4dp"
-                android:text="@string/recipie_name"
-                android:textColor="@color/primary_text"
-                android:textSize="24sp"
-                android:textStyle="bold" />
-
-            <TextView
-                android:id="@+id/widget_servings"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:paddingLeft="4dp"
-                android:paddingRight="4dp"
-                android:text="@string/servings"
-                android:textColor="@color/secondary_text"
-                android:textSize="24sp" />
-        </LinearLayout>
-
-    </LinearLayout>
-
-    <LinearLayout
-        android:id="@+id/ingerdient_list"
-        android:layout_width="match_parent"
+    <TextView
+        android:id="@+id/widget_item_recipe_name"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:textStyle="bold"
+        tools:text="Recipe Name"
+        android:textColor="@android:color/white" />
 
-    </LinearLayout>
+    <TextView
+        android:id="@+id/widget_item_ingredients"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        tools:text="Recipe Ingredients"
+        android:textColor="@android:color/white" />
 </LinearLayout>
